test_outputs/connlist/anp_test_ingress_egress_intersection_connlist_output.txt
0.0.0.0-255.255.255.255 => bar-ns/bar[Deployment] : All Connections
0.0.0.0-255.255.255.255 => foo-ns-1/foo[Deployment] : All Connections
0.0.0.0-255.255.255.255 => foo-ns-2/foo[Deployment] : All Connections
0.0.0.0-255.255.255.255 => kube-system/kube-dns[Deployment] : All Connections
0.0.0.0-255.255.255.255 => monitoring-ns/monitoring[Deployment] : All Connections
bar-ns/bar[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
bar-ns/bar[Deployment] => foo-ns-1/foo[Deployment] : UDP 5353
bar-ns/bar[Deployment] => foo-ns-2/foo[Deployment] : UDP 5353
bar-ns/bar[Deployment] => kube-system/kube-dns[Deployment] : UDP 5353
bar-ns/bar[Deployment] => monitoring-ns/monitoring[Deployment] : UDP 5353
foo-ns-1/foo[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
foo-ns-1/foo[Deployment] => bar-ns/bar[Deployment] : UDP 5353
foo-ns-1/foo[Deployment] => foo-ns-2/foo[Deployment] : UDP 5353
foo-ns-1/foo[Deployment] => kube-system/kube-dns[Deployment] : UDP 5353
foo-ns-1/foo[Deployment] => monitoring-ns/monitoring[Deployment] : UDP 5353
foo-ns-2/foo[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
foo-ns-2/foo[Deployment] => bar-ns/bar[Deployment] : UDP 5353
foo-ns-2/foo[Deployment] => foo-ns-1/foo[Deployment] : UDP 5353
foo-ns-2/foo[Deployment] => kube-system/kube-dns[Deployment] : UDP 5353
foo-ns-2/foo[Deployment] => monitoring-ns/monitoring[Deployment] : UDP 5353
kube-system/kube-dns[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
kube-system/kube-dns[Deployment] => bar-ns/bar[Deployment] : UDP 5353
kube-system/kube-dns[Deployment] => foo-ns-1/foo[Deployment] : UDP 5353
kube-system/kube-dns[Deployment] => foo-ns-2/foo[Deployment] : UDP 5353
kube-system/kube-dns[Deployment] => monitoring-ns/monitoring[Deployment] : UDP 5353
monitoring-ns/monitoring[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
monitoring-ns/monitoring[Deployment] => bar-ns/bar[Deployment] : UDP 5353
monitoring-ns/monitoring[Deployment] => foo-ns-1/foo[Deployment] : UDP 5353
monitoring-ns/monitoring[Deployment] => foo-ns-2/foo[Deployment] : UDP 5353
monitoring-ns/monitoring[Deployment] => kube-system/kube-dns[Deployment] : UDP 5353
